# esp8266-firmware

./: .gitignore  CMakeLists.txt  Makefile-user.mk  README.md
app/: application.cpp
src/Kernel/: Configuration.cpp  Configuration.h  Kernel.cpp  Kernel.h  LightUnit.cpp  LightUnit.h  RelayUnit.cpp  RelayUnit.h  Unit.cpp  Unit.h
src/WebSocketClient/: WebSocketClient.cpp  WebSocketClient.h
